--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 menu:
     Blog: /
     Archive: /archives/
-    Weibo: http://weibo.com/sunchongsheng
-    GitHub: https://github.com/pinggod
+    Weibo: https://weibo.com/u/2453162147
+    GitHub: https://github.com/donglyu
     Rss: /atom.xml
 
 favicon: /favicon.png
