--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 menu:
     Blog: /
     Archive: /archives/
+    lydsnm's Life: http://life.lydsnm.top
     Weibo: https://weibo.com/u/2453162147
     GitHub: https://github.com/donglyu
     Rss: /atom.xml
